--- a/Blind75/Blind75.csproj
+++ b/Blind75/Blind75.csproj
@@ -47,6 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TwentyOneMergeTwoSortedLIsts.cs" />
+    <Compile Include="SixtySixPlusOne.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="TwentyValidParentheses.cs">
       <SubType>Form</SubType>
     </Compile>
